--- a/ehr/client/package.json
+++ b/ehr/client/package.json
@@ -1,14 +1,32 @@
 {
-  "name": "ehr",
+  "name": "ehr-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "@hospitalrun/components": "^3.4.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.1.1",
+    "@mui/styled-engine-sc": "^5.1.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "bootstrap": "^4.5.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17",
+    "material-ui-search-bar": "^1.0.0",
+    "moment": "^2.27.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-icons": "^3.10.0",
+    "react-moment": "^0.9.7",
+    "react-router-dom": "^5.2.0",
+    "react-select": "^3.1.0",
+    "react-table": "^7.7.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
