--- a/ehr/client/package.json
+++ b/ehr/client/package.json
@@ -21,10 +21,12 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react-icons": "^3.10.0",
+    "react-intl": "^5.24.6",
     "react-moment": "^0.9.7",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
     "react-select": "^3.1.0",
     "react-table": "^7.7.0",
     "web-vitals": "^1.1.2"
