--- a/ehr/client/package.json
+++ b/ehr/client/package.json
@@ -2,7 +2,6 @@
   "name": "ehr-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@hospitalrun/components": "^3.4.0",
     "@material-ui/core": "^4.12.3",
@@ -14,7 +13,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "datatables.net": "^1.11.5",
+    "datatables.net-dt": "^1.11.5",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "lodash": "^4.17",
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.27.0",
