--- a/ehr/client/package.json
+++ b/ehr/client/package.json
@@ -16,6 +16,8 @@
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^3.10.0",
     "react-pro-sidebar": "^0.7.1",
